[SC-17947] Fixed validation after adding vercel portal domain. Fixed double scroll when top menu is shown. Updated vercel domains grid column width

--- a/src/app/admin/settings/shared/domain-settings/domain-settings.component.less
+++ b/src/app/admin/settings/shared/domain-settings/domain-settings.component.less
@@ -44,12 +44,9 @@
     }
 
     .tab-body {
-        height: calc(100vh - 210px);
-
         &#SSLTable {
             width: 100%;
             position: relative;
-            height: calc(100vh - 251px);
             background-color: rgba(231, 239, 246, 0.4);
             border-radius: 10px;
             padding: 25px;
